# todo_list_test

./: .gitignore  README.md  pyproject.toml  review_report.json
app/: __init__.py  __main__.py
docs/: src.md
docs/src/: app.md  shared.md  tasks.md
docs/src/shared/: domain.md
docs/src/tasks/: domain.md
src/app/: __init__.py  __main__.py
src/shared/domain/: base_entity.py
src/tasks/domain/: entities.py
tests/: test_task_entity.py
